objects/MergeObject4__c.object
<CustomObject>
    <fields>
        <fullName>MergeObj4field1__c</fullName>
        <description>Test MergeObj4field1</description>
        <label>MergeObj4field1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MergeObj4field2__c</fullName>
        <description>Test  MergeObj4field2</description>
        <label>MergeObj4field2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MergeObj4field3__c</fullName>
        <description>Test MergeObj4field3434</description>
        <label>MergeObj4field3</label>
        <type>Phone</type>
    </fields>
    <label>MergeObject4</label>
    <nameField>
        <label>MergeObject4 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MergeObject4s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>